initialised shadcn-svelte

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"flask-dev": "pipenv install --dev && python -m flask --app api/wsgi run -p 3000",
+		"sveltekit-dev": "vite dev --port 3001",
+		"dev": "concurrently \"pnpm run sveltekit-dev\" \"pnpm run flask-dev\"",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
@@ -14,6 +16,7 @@
 		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.523.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -21,11 +24,15 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"@vitest/browser": "^3.2.3",
+		"clsx": "^2.1.1",
 		"concurrently": "^9.2.0",
 		"playwright": "^1.53.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
+		"tw-animate-css": "^1.3.4",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6",
 		"vite-plugin-devtools-json": "^0.2.0",
